--- a/styles/components/_block-icons.scss
+++ b/styles/components/_block-icons.scss
@@ -1,7 +1,7 @@
 $blocks-icons-color: $rc-text-secondary;
 $block-icons-bg: $rc-container-bg;
 
-//面板上按钮
+//窗口顶栏
 .block__icons {
   font-size: 11px;
   height: 40px;
@@ -21,58 +21,44 @@ $block-icons-bg: $rc-container-bg;
     // }
   }
 
-  // &::after {
-  //   display: block;
-  //   content: "";
-  //   position: absolute;
-  //   width: 94%;
-  //   height: 1px;
-  //   top: 36px;
-  //   left: 3%;
-  //   right: 3%;
-  //   background-image: linear-gradient(
-  //     to right,
-  //     $gray-2,
-  //     transparent
-  //   );
-  // }
   :not(.block__popover)>& {
-    padding: 5px 8px 5px 5px;//8px+3px+8px;
+    padding: 5px 8px 5px 5px;
   }
 
+  // 间隔
   .fn__space {
     width: 3px;
   }
 
+  // 边窗顶栏logo
   .block__logo {
     svg {
       color: $blocks-icons-color;
       @include graphic(24px, 10px);
     }
-
     margin-right: 8px;
     margin-left: 0px;
-
   }
 
+  //窗口顶栏按钮
   .block__icon {
     @include block__icon__model(24px, 10px);
-    // margin-left: 3px;
     color: $blocks-icons-color;
 
+    // 关闭
     &[data-type="close"] {
       svg {
-        @include graphic(24px, 8px)
+        @include graphic(24px, 8px);
       }
     }
   }
 
+  // 计数块
   .listCount,
   .listMCount {
     @extend %counter__model;
-    // width: 24px;
-    height: 24px !important;
-    line-height: 24px !important;
+    height: 24px;
+    line-height: 24px;
     padding: 0 8px;
     margin: 0px;
     margin-right: 3px;
@@ -82,19 +68,5 @@ $block-icons-bg: $rc-container-bg;
     +.fn__space {
       display: none;
     }
-  }
-
-  .b3-form__icon-icon {
-    @include graphic(16px, 10px);
-    left: 4px;
-  }
-
-  .b3-text-field {
-    border: transparent !important;
-    padding-left: 24px !important;
-    border-radius: $rc-bradius-extra-small;
-    // &:focus{
-    //   border: 1px solid $rc-border-2;
-    // }
   }
 }
