--- a/styles/pages/dialog/_account.scss
+++ b/styles/pages/dialog/_account.scss
@@ -1,5 +1,4 @@
 $dialog-account-border: $rc-border-3;
-$dialog-account-button-color: $rc-brand;
 $dialog-account-button-bg-hover: $rc-brand-light;
 
 .b3-dialog__container {
@@ -15,15 +14,16 @@ $dialog-account-button-bg-hover: $rc-brand-light;
         line-height: 20px;
       }
 
-      .b3-button {
-        color: $dialog-account-button-color;
+      .b3-button--cancel {
+        background-color: transparent;
 
         &:hover {
           background-color: $dialog-account-button-bg-hover;
         }
-        svg{
-          width: 14px;
-          height: 14px;
+
+        svg {
+          width: 12px;
+          height: 12px;
           margin-right: 0;
         }
       }
