fix: 修复全局提示高度问题

--- a/styles/layout/_status.scss
+++ b/styles/layout/_status.scss
@@ -42,7 +42,7 @@
     .status__msg {
         display: flex;
         margin-left: 45px - 30px;
-        &::before {
+        &:not(:empty):before {
             content: '';
             display: flex;
             width: 12px;
