--- a/styles/components/_snackbar.scss
+++ b/styles/components/_snackbar.scss
@@ -25,7 +25,7 @@ $snackbar-danger-color: $rc-error;
       font-size: 14px;
       max-width: 30vw;
       line-height: 22px;
-      height: 22px + 13px * 2;
+      // height: 22px + 13px * 2;
 
       // 提示种类图标
       &::before {
@@ -44,6 +44,10 @@ $snackbar-danger-color: $rc-error;
 
       a {
         color: $snackbar-link-color;
+      }
+
+      .fn__space{
+        width: 4px;
       }
     }
 
@@ -66,10 +70,11 @@ $snackbar-danger-color: $rc-error;
   // 提示内按钮
   .b3-button {
     background-color: $rc-brand-light;
-    padding: 2px 6px;
+    padding: 2px 6px !important;
     font-size: 11px;
     line-height: 18px;
     transform: translateY(-2px);
+    height: 18px + 2px * 2;
 
     // height: 22px;
     &:hover {
