--- a/styles/pages/dialog/_keymapList.scss
+++ b/styles/pages/dialog/_keymapList.scss
@@ -1,4 +1,11 @@
 #keymapList {
+
+    // 
+    .b3-form__icon-icon{
+        top: 0.5px;
+        left: 0.5px;
+    }
+
     .b3-list {
         margin: 0;
 
