--- a/styles/components/_snackbar.scss
+++ b/styles/components/_snackbar.scss
@@ -85,7 +85,7 @@ $snackbar-danger-color: $rc-error;
   // 全部已读按钮
   >.b3-button {
     margin: 0;
-    padding: 8px 16px 16px;
+    padding: 8px 16px 16px !important;
     background-color: transparent;
     width: auto;
     height: 28px + 8px + 16px;
