--- a/styles/utils/_placeholders.scss
+++ b/styles/utils/_placeholders.scss
@@ -6,6 +6,7 @@
   text-align: center;
   justify-content: center;
   line-height: 22px;
+  color: $rc-text-secondary;
   background-color: $rc-component-bg;
   border-radius: $rc-bradius-extra-small;
   &:hover {
